--- a/Dotnet/ConsoleApp01/ConsoleApp01.csproj
+++ b/Dotnet/ConsoleApp01/ConsoleApp01.csproj
@@ -1,12 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.11.4" />
   </ItemGroup>
-
 </Project>
